// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProvaCompetenzaResponseView /> visualizza il riepilogo con le informazioni di base se voto < 6 1`] = `
<ResponseView
  badSrc="IMAGE_MOCK"
  goodSrc="IMAGE_MOCK"
  product="product"
  resetFunction={[Function]}
  votoApprossimato={5}
/>
`;

exports[`<ProvaCompetenzaResponseView /> visualizza il riepilogo con le informazioni di base se voto >= 6 1`] = `
<ResponseView
  badSrc="IMAGE_MOCK"
  goodSrc="IMAGE_MOCK"
  product="product"
  resetFunction={[Function]}
  votoApprossimato={8}
/>
`;
